--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
         kotlin_version = "1.5.21"
         navigation_version = "2.3.5"
         datastore_version = "1.0.0-rc01"
+        hilt_version = "2.37"
+        retrofit_version = "2.9.0"
     }
 
     repositories {
@@ -16,6 +18,9 @@ buildscript {
 
         // Navigation
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+        // Hilt
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
