--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         navigation_version = "2.3.5"
         datastore_version = "1.0.0-rc01"
         hilt_version = "2.37"
+        qr_version = "3.6.0"
         retrofit_version = "2.9.0"
     }
 
@@ -13,7 +14,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.1"
+        classpath "com.android.tools.build:gradle:4.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // Navigation
@@ -30,7 +31,6 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 
