--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
     <application
         android:usesCleartextTraffic="true"
         android:name=".GachonQRApplication"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon_gachon_qr"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon_gachon_qr_circle"
         android:supportsRtl="true"
         android:theme="@style/Theme.GachonQR">
         <activity
