--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,9 @@
             android:windowSoftInputMode="adjustResize">
 
         </activity>
-        <activity android:name=".activity.SplashActivity">
+        <activity
+            android:name=".activity.SplashActivity"
+            android:theme="@style/Theme.GachonQR.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
